--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ packages/react-devtools-extensions/shared/build
 packages/react-devtools-extensions/.tempUserDataDir
 packages/react-devtools-inline/dist
 packages/react-devtools-shell/dist
+dist/
